--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.2.0
   provider: ^6.1.2
   syncfusion_flutter_charts: ^26.1.35
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
